# indesign_to_md

./: .gitignore  README.md  pyproject.toml
config/: styles.default.yaml  translation.yaml
docs/: README.md  cli.md  configuration.md  installation.md  laudo_completude_unidade4_es.md  output-format.md  pipeline-conversion.md  pipeline-translation.md  scripts.md  testing.md  troubleshooting.md
docs/api/: core.md  equations-assets.md  idml-parsing.md  output.md  translation.md  utils.md
idml_to_md/: __init__.py  anchored_resolver.py  asset_processor.py  cli.py  config.py  equation_extractor.py  idml_reader.py  mathml_to_latex.py  md_writer.py  models.py  pipeline.py  report.py  story_walker.py  style_mapper.py  table_renderer.py  thread_resolver.py  toc_builder.py
idml_to_md/translation/: __init__.py  audit_reporter.py  classifier.py  cli.py  completeness_checker.py  idml_writer.py  models.py  openai_client.py  pipeline.py  prompt_builder.py  queue_cli.py  queue_runner.py  segment_extractor.py  title_consistency.py
idml_to_md/utils/: __init__.py  slugify.py  subprocess_safe.py  xml.py
scripts/: extract_mathml_smoke.py  rebuild_idml_from_translations.py  verify_translation_completeness.py
tests/: README.md  conftest.py
tests/integration/: test_pipeline_real.py
tests/unit/: test_anchored_resolver.py  test_asset_processor.py  test_equation_extractor.py  test_idml_reader.py  test_mathml_to_latex.py  test_md_writer.py  test_pipeline.py  test_report.py  test_smoke.py  test_story_walker.py  test_style_mapper.py  test_subprocess_safe.py  test_table_renderer.py  test_thread_resolver.py  test_toc_builder.py  test_xml_utils.py
tests/unit/translation/: conftest.py  test_audit_reporter.py  test_classifier.py  test_cli.py  test_completeness_checker.py  test_idml_writer.py  test_models.py  test_openai_client.py  test_pipeline.py  test_prompt_builder.py  test_queue_cli.py  test_queue_runner.py  test_segment_extractor.py  test_title_consistency.py
